# 1C_proj

./: CMakeLists.txt  README.md  main.cpp
include/: algorithm.hpp  command_manager.hpp
include/algorithms/: greed.hpp
include/tools/: geom_struct.hpp  support.hpp
src/: algo.cpp  command_impl.cpp  greed.cpp  impl.cpp
tests/: CMakeLists.txt  test.cpp
